--- a/CadastroClientes/src/cadastroclientes/LoginUI.form
+++ b/CadastroClientes/src/cadastroclientes/LoginUI.form
@@ -246,7 +246,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Profissional Acess"/>
+                <Property name="text" type="java.lang.String" value="Professional Acess"/>
               </Properties>
             </Component>
           </SubComponents>
